--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-flipper": "^0.138.0",
+    "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1",
     "redux-flipper": "^2.0.1",
