--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^0.26.1",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-encrypted-storage": "^4.0.2",
     "react-native-flipper": "^0.138.0",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-safe-area-context": "^4.2.1",
