ch2. react-native-config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["scrollview"]
+  "cSpell.words": ["fooddeliveryapp", "scrollview"],
+  "java.configuration.updateBuildConfiguration": "interactive"
 }
