--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.26.1",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-config": "^1.4.5",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-flipper": "^0.138.0",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
